--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,8 @@
 
   <div id="container">
     <strong>you ready to whatch some anime?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <br>
+    <br>
+    <img src="https://as.com/meristation/imagenes/2020/02/25/noticias/1582633440_968479_1582633536_noticia_normal.jpg" height="300" width="400"/>
   </div>
 </ion-content>
