--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,9 +1,2 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>action-sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<app-header title="action sheet"></app-header>
+<ion-content> </ion-content>
