--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,9 +1,2 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>alert</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<app-header title="alert"></app-header>
+<ion-content> </ion-content>
