--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,14 +1,18 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Componentes</ion-title>
+    <ion-title color="primary">Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<ion-button routerLink="/alert">
-  Alert 
-</ion-button>
-<ion-button routerLink="/action-sheet">
-  Action-sheet 
-</ion-button>
+  <ion-list>
+    <ion-item *ngFor="let c of components" [routerLink]="c.redirectTo">
+      <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
+      {{c.name}}
+    </ion-item>
+  </ion-list>
+  <!-- <ion-button routerLink='/alert' >Alert</ion-button> -->
+  <!-- <ion-button routerLink='/action-sheet' >Action Sheet</ion-button> -->
 </ion-content>
+
+<!-- <ion-icon slot="start" name="add"></ion-icon> -->
